vlib/v/checker/tests/optional_or_block_mismatch.vv
module main

struct Bar {}

fn foo() ?&Bar {
	return none
}

fn main() {
	x := foo() or { Bar{} }
	println(x)

	foo() or { Bar{} }
}
